<?xml version="1.0"?>
<package format="2">
  <name>alpha_acomms</name>
  <version>0.0.0</version>
  <description>The acoustic communication package</description>

  <maintainer email="jason_miller@uri.edu">jason_miller</maintainer>
  <author email="jason_miller@uri.edu">jason_miller</author>

  <license>GPLv3</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>mvp_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>message_filters</depend>
  <depend>geometry_msgs</depend>
  <depend>geographic_msgs</depend>
  <depend>robot_localization</depend>
  <depend>serial</depend>
  <depend>proto</depend>
  <depend>goby</depend>
  <depend>dccl</depend>
  <depend>dynamic_reconfigure</depend>

  <export>

  </export>
</package>
